_INPUT/pagination/data_demo2.css
#container
{
borderx: 2px solid red;
overflow: hidden;

display: block;

/* .full
position: absolute;

left: 0px;
top: 0px;

width: VIEWPORT_WIDTHpx;
height: VIEWPORT_HEIGHTpx;
*/

    background-color: white;
    
}

#container p
{
    font-family: "FingerPaint", sans-serif;
    color: #333333;
    font-size: 55%;
}

#canvas
{
borderx: 4px solid blue;

-webkit-backface-visibility: hidden;

    position: relative;
    left: 0px;
    top: 0px;
    
    width: 4vw;
    width: calc(4 * VIEWPORT_WIDTHpx);
    
    height: 2vh;
    height: calc(2 * VIEWPORT_HEIGHTpx);
}


.unit
{
    borderx: 1px solid magenta;

    -webkit-transform: translate3d(0, 0, 0);

    overflow: visible;
    
    position: absolute;
    
    width: 0.33vw;
    width: calc(VIEWPORT_WIDTHpx / 3);
    
    height: 1vw;
    height: VIEWPORT_HEIGHTpx;
    
    padding: 1em;
    
    text-align: justify;
}

.span2x2y
{
    width: 0.66vw;
    width: calc(2 * VIEWPORT_WIDTHpx / 3);
    
    height: 2vw;
    height: calc(2 * VIEWPORT_HEIGHTpx);
}
.span2x
{
    width: 0.66vw;
    width: calc(2 * VIEWPORT_WIDTHpx / 3);
}
.span12x
{
    width: 0.66vw;
    width: calc(12 * VIEWPORT_WIDTHpx / 3);
}

.row0
{
    top: 0px;
}
.row1
{
    top: VIEWPORT_HEIGHTpx;
}
.col0
{
    left: 0px;
}
.col1
{
    left: calc(1 * VIEWPORT_WIDTHpx / 3);
}
.col2
{
    left: calc(2 * VIEWPORT_WIDTHpx / 3);
}
.col3
{
    left: calc(3 * VIEWPORT_WIDTHpx / 3);
}
.col4
{
    left: calc(4 * VIEWPORT_WIDTHpx / 3);
}
.col5
{
    left: calc(5 * VIEWPORT_WIDTHpx / 3);
}
.col6
{
    left: calc(6 * VIEWPORT_WIDTHpx / 3);
}
.col7
{
    left: calc(7 * VIEWPORT_WIDTHpx / 3);
}
.col8
{
    left: calc(8 * VIEWPORT_WIDTHpx / 3);
}
.col9
{
    left: calc(9 * VIEWPORT_WIDTHpx / 3);
}
.col10
{
    left: calc(10 * VIEWPORT_WIDTHpx / 3);
}

#unit0
{
    padding-top: 0em;
}


#unit-1 img
{
    position: absolute;
    bottom: 0px;
    right: 0px;
    opacity: 0.6;

-PREFIXED_PROPERTY-transform: translate(-6.66%, 0);
}

#unit-2 img
{
-PREFIXED_PROPERTY-transform: translate(0, 350px);
opacity: 0;

-PREFIXED_PROPERTY-transition-property: transform, opacity;
-PREFIXED_PROPERTY-transition-duration: 1500ms;
-PREFIXED_PROPERTY-transition-delay: 500ms;
-PREFIXED_PROPERTY-transition-timing-function: ease-out;
}

#container[data-subpage="2"] #unit-2 img
{
-PREFIXED_PROPERTY-transform: translate(0, 0);
opacity: 1;
}

#unit9 img
{
    width: 100%;
    height: 100%;

    -PREFIXED_PROPERTY-transform-origin: 50% 100%;
    -PREFIXED_PROPERTY-transform: scale(0.3) rotate(-16deg) translate(-100%, 0);
}

#unit2 img
{
    -PREFIXED_PROPERTY-transform-origin: 50% 100%;
}

#container.transit #canvas
{
-PREFIXED_PROPERTY-transition-property: transform;
-PREFIXED_PROPERTY-transition-duration: 500ms;
-PREFIXED_PROPERTY-transition-delay: 0s;
-PREFIXED_PROPERTY-transition-timing-function: ease-in-out;
}

#container #unit9 img
{
-PREFIXED_PROPERTY-transition-property: transform;
-PREFIXED_PROPERTY-transition-duration: 500ms;
-PREFIXED_PROPERTY-transition-delay: 0s;
-PREFIXED_PROPERTY-transition-timing-function: ease-in-out;
}

#container[data-subpage="3"].forwards #unit9 img
{
-PREFIXED_PROPERTY-transition-delay: 500ms;
-PREFIXED_PROPERTY-transition-duration: 1000ms;
}


#container[data-subpage="5"] #unit9 img
{
-PREFIXED_PROPERTY-transition-property: transform, opacity;
}

#container #unit2 img
{
-PREFIXED_PROPERTY-transition-property: transform;
-PREFIXED_PROPERTY-transition-duration: 900ms;
-PREFIXED_PROPERTY-transition-delay: 0s;
-PREFIXED_PROPERTY-transition-timing-function: ease-in-out;
}

#container[data-subpage="1"] #unit2 img
{
-PREFIXED_PROPERTY-transition-property: transform;
-PREFIXED_PROPERTY-transition-duration: 1500ms;
-PREFIXED_PROPERTY-transition-delay: 0s;
-PREFIXED_PROPERTY-transition-timing-function: ease-out;
}

#container[data-subpage="0"] #canvas
{
    transform: none;
}

#container[data-subpage="0"] #unit2 img
{
     -PREFIXED_PROPERTY-transform: translate(0, 0) rotate(-8deg);
}

#container[data-subpage="1"] #canvas
{
    /* -PREFIXED_PROPERTY-transform: translate(-1vw, 0);
    -PREFIXED_PROPERTY-transform: translate(-VIEWPORT_WIDTHpx, 0); */
    -PREFIXED_PROPERTY-transform: translate(-25%, 0);
}

#container[data-subpage="1"] #unit2 img
{
     -PREFIXED_PROPERTY-transform: translate(200px, 0) rotate(10deg);
}

#container[data-subpage="2"] #canvas
{
    /* -PREFIXED_PROPERTY-transform: translate(-1vw, -1vh);
    -PREFIXED_PROPERTY-transform: translate(-VIEWPORT_WIDTHpx, -VIEWPORT_HEIGHTpx); */
    -PREFIXED_PROPERTY-transform: translate(-25%, -50%);
}

#container[data-subpage="3"] #canvas
{
    /* -PREFIXED_PROPERTY-transform: translate(-2vw, -1vh);
    -PREFIXED_PROPERTY-transform: translate(calc(-2*VIEWPORT_WIDTHpx), -VIEWPORT_HEIGHTpx); */
    -PREFIXED_PROPERTY-transform: translate(-50%, -50%);
}

#container[data-subpage="4"] #canvas
{
    /* -PREFIXED_PROPERTY-transform: translate(-2.66vw, -1vh);
    -PREFIXED_PROPERTY-transform: translate(calc(-2.66*VIEWPORT_WIDTHpx), -VIEWPORT_HEIGHTpx); */
    -PREFIXED_PROPERTY-transform: translate(-66.66%, -50%);
}

#container[data-subpage="3"] #unit9 img
{
    -PREFIXED_PROPERTY-transform: scale(0.5) rotate(-8deg) translate(0, 0);
}

#container[data-subpage="4"] #unit9 img
{
    -PREFIXED_PROPERTY-transform: scale(1) rotate(0);
}


#container[data-subpage="5"] #canvas
{
    /* -PREFIXED_PROPERTY-transform: translate(-2.66vw, 0);
    -PREFIXED_PROPERTY-transform: translate(calc(-2.66*VIEWPORT_WIDTHpx), 0); */
    -PREFIXED_PROPERTY-transform: translate(-66.66%, 0);
}

#container[data-subpage="5"] #unit9 img
{
    -PREFIXED_PROPERTY-transform: translate(0,-VIEWPORT_HEIGHTpx) rotate(0);
    opacity: 0.5;
}

#unit12 h1
{
    position: absolute;
    font-size: 200%;
    bottom: 1em;
}

